<resources>
    <string name="upgrade_immediately">upgrade immediately</string>
    <string name="about_kuzhai">About e-Welink</string>
    <string name="info_updates">the current version is the latest version</string>
    <string name="chose_version">please choose a device</string>
    <string name="registing">registering device...</string>
    <string name="config_device">Devices to be configured:</string>
    <string name="chose_internet">Please choose a network</string>
    <string name="send_config_msg">Sending</string>
    <string name="not_find_device">Not found equipment, may be due to your system security center or the right to manage to disable the cool house network access</string>
    <string name="config_sucess">Configuration success</string>
    <string name="err_internet">Network error,Please check if the device is in the configuration mode.</string>
    <string name="not_found_device">No intelligent devices found,Please check if the device is in the configuration mode.</string>
    <string name="not_device">Device does not exist</string>
    <string name="air_cleaner">Air cleaner</string>
    <string name="best">Best</string>
    <string name="fine">Fine</string>
    <string name="middle">Middle</string>
    <string name="bad">Bad</string>
    <string name="inferior">Inferior</string>
    <string name="shutdown">Shutdown</string>
    <string name="wind_speed">Wind speed</string>
    <string name="fireplace_power_on">power on</string>
    <string name="fireplace_power_off">power off</string>
    <string name="air">Air:</string>
    <string name="temperature">Temperature：</string>
    <string name="c">Centigrade</string>
    <string name="humidity">Humidity：</string>
    <string name="not_internet_current">There is no available network</string>
    <string name="device_not_online">Equipment is not online</string>
    <string name="operation_failure">Operation failure</string>
    <string name="online">(Online)</string>
    <string name="offline">(Offline)</string>
    <string name="device_manufacturers">Device manufacturers:</string>
    <string name="device_type">Device type:</string>
    <string name="device_version">Device firmware version:</string>
    <string name="share_owner_device">Only equipment owners to share equipment</string>
    <string name="device_upgraded_to">Equipment to be upgraded to</string>
    <string name="info_wait_upgrade">You will not be able to operate the device, the upgrade process may continue for several decades, please be patient</string>
    <string name="info_sure_delete">Are you sure you want to remove the device? You can add the device to the device after you delete it</string>
    <string name="ota_failed_upgrade">Device %1$s ota Upgrade fail</string>
    <string name="ota_success_upgrade">Device %1$s ota Upgrade success</string>
    <string name="ota_finish_upgrade">Device %1$s ota Upgrade</string>
    <string name="device">Device</string>
    <string name="firmware_upgradeing">Device %1$s Ongoing firmware upgrade...</string>
    <string name="background_updateing">Device %1$s Is the background of the firmware upgrade...</string>
    <string name="sms_mustbenoempty">Verification code can not be empty</string>
    <string name="device_info">Device information:</string>
    <string name="device_information">Device information</string>
    <string name="tips">Reminder</string>
    <string name="info_relogin">Your login has expired, please log in again.</string>
    <string name="ok">Yes</string>
    <string name="Save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="test_wechat">Test wechat</string>
    <string name="group_exits">Grouping already exists</string>
    <string name="delete_group">All devices of the deleted group will still exist.Are you sure you want to delete the group?</string>
    <string name="server_official">Switch server: the current is the official server</string>
    <string name="server_test">Switch server: the test server is currently</string>
    <string name="change_device">Change device</string>
    <string name="info_not_change">The device does not belong to you, you can not modify the device name</string>
    <string name="change_name_success">Change name success</string>
    <string name="change_name_failed">Change name failed</string>
    <string name="waiting">Waiting...</string>
    <string name="divece_name">Divece Name:</string>
    <string name="device_name_not">Device name can not be empty</string>
    <string name="timer">Timing</string>
    <string name="once">Only this time</string>
    <string name="everyday">Everyday</string>
    <string name="mounth">Month</string>
    <string name="day">Day</string>
    <string name="days">Working days</string>
    <string name="weekends">Weekend</string>
    <string name="week">Week</string>
    <string name="modify_timer_success">Modified timer success</string>
    <string name="add_timer_success">Increase timer success</string>
    <string name="delete_timer_success">Delete timer success</string>
    <string name="date">day</string>
    <string name="add_timer_failed">Add timer fail</string>
    <string name="delete_timer_failed">Delete timer fail</string>
    <string name="am">Morning</string>
    <string name="pm">Afternoon</string>
    <string name="timer_set_err">Timer time setting error</string>
    <string name="only_number">Only 8 timers are allowed.</string>
    <string name="repassword">Reset password</string>
    <string name="commit">Submit</string>
    <string name="enter_newaccount_paswd">Enter new password.</string>
    <string name="user_register">New user registration</string>
    <string name="enter_account_paswd">Enter account password</string>
    <string name="password_not">Password can not be empty</string>
    <string name="enter_phone_numbers">Enter phone number</string>
    <string name="registering">In registration...</string>
    <string name="resend">s after re sending</string>
    <string name="change_user_info">Change user info</string>
    <string name="enter_name">Enter a new nickname</string>
    <string name="name_not">Nickname can not be empty</string>
    <string name="modify_name_success">Modify nickname success</string>
    <string name="modify_name_failed">Modify nickname failure</string>
    <string name="change_password">enter old password</string>
    <string name="enter_password">Please enter password</string>
    <string name="old_paswd_not">Old password can not be empty</string>
    <string name="new_paswd_not">The new password can not be empty</string>
    <string name="secondary_not">The two time to confirm password can not be empty</string>
    <string name="two_passwords_notsam">Two times the password is not the same</string>
    <string name="info_old_paswd">Your original password is entered incorrectly, the password is the number and size of the letters, at least 8</string>
    <string name="info_fomat_paswd">At least 8 characters, contains upper and lower case letter and number</string>
    <string name="info_check_internet">No network, please check the network connection</string>
    <string name="info_again_enter">Original password error, please re-enter</string>
    <string name="change_password_failed">Failed to modify password:</string>
    <string name="change_susess">Change success</string>
    <string name="user">User</string>
    <string name="user_online">Users not online</string>
    <string name="user_exist">Users do not exist</string>
    <string name="share_success">Share successful</string>
    <string name="user_denied">Users have refused</string>
    <string name="user_sharex">Users have shared</string>
    <string name="share_outtime">Share a timeout</string>
    <string name="wait_requset">Waiting for confirm</string>
    <string name="share_device">Share device</string>
    <string name="repeat_time">Repeat timing</string>
    <string name="continue_time">Continue timing</string>
    <string name="select_user">Select a user</string>
    <string name="enter_phone_number">Please enter the correct phone number</string>
    <string name="not_share_own">Do not need to share the device to yourself</string>
    <string name="has_share">The user has shared</string>
    <string name="recevice_share">Received the invitation to share equipment</string>
    <string name="err_cmdorfomat">Wrong command or format</string>
    <string name="err_server">Server internal error</string>
    <string name="not_even">The response number is not an even number:</string>
    <string name="only_english">Only allowed english</string>
    <string name="err_length">Length more than 512 characters</string>
    <string name="enter_not_null">Input can not be empty</string>
    <string name="device_info_title">Device info</string>
    <string name="del_dialog">Deleting Timer...</string>
    <string name="err_fomat">Format is wrong:</string>
    <string name="logining">Is logged in...</string>
    <string name="committime">Creating timer...</string>
    <string name="login_failed">Login failed, user name or password error</string>
    <string name="shook_on">Shake head mode: open</string>
    <string name="shook_off">Shake head mode: off</string>
    <string name="device_one">Device 1</string>
    <string name="device_two">Device 2</string>
    <string name="device_three">Device 3</string>
    <string name="device_four">Device 4</string>
    <string name="register_success">Registered success</string>
    <string name="switch_net_error">Switch network error, please re add</string>
    <string name="connect_failed">Connection device failed,please check if the device is in pairing mode</string>
    <string name="add_failed">Add failure</string>
    <string name="info_notset_group">The device does not belong to you, you can not modify the device group</string>
    <string name="repeat_password_success">Reset password successfully</string>
    <string name="repeat_password_failed">Reset password failed</string>
    <string name="register_failed">Registration failure</string>
    <string name="downloading">Downloading</string>
    <string name="add_new_timer">Add timer</string>
    <string name="repeat">Repeat</string>
    <string name="one">One </string>
    <string name="two">Two </string>
    <string name="three">Three </string>
    <string name="four">Four </string>
    <string name="five">Five </string>
    <string name="six">Six </string>
    <string name="seven">Seven </string>
    <string name="complete">Complete</string>
    <string name="hex_display">hex display</string>
    <string name="enter_cmd">Please enter the command</string>
    <string name="assiic_directive">Assiic command</string>
    <string name="hex_directive">Sixteen decimal instruction</string>
    <string name="clear_result">Clear result</string>
    <string name="share">Share</string>
    <string name="display_send">Display sending</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="enter_new_passwod">enter new password</string>
    <string name="again_new_password">enter new password</string>
    <string name="set_group_nameicon">Name the group and set icon</string>
    <string name="enter_group_name">Input group name</string>
    <string name="selected_icon">choose icon</string>
    <string name="upload_icon">upload icon</string>
    <string name="find_new_version">A new version found,pleas update </string>
    <string name="upgrade">update</string>
    <string name="manager_group">Manage Group</string>
    <string name="exit_login">Exit Account</string>
    <string name="exit_coolkit">Exit e-Welink</string>
    <string name="new_home_kit">coolkit %1$s apk update</string>
    <string name="input_simple_title">Input title</string>
    <string name="describ_feebback">Input description</string>
    <string name="confirm_new_password">Confirm Password</string>
</resources>