<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/di_left"
    android:paddingRight="@dimen/di_right" >

    <TextView
        android:id="@+id/tv_tip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        android:gravity="center"
        android:text="@string/set_group_nameicon" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_tip"
        android:maxLines="2"
        android:hint="@string/enter_group_name" />

    <LinearLayout
        android:id="@+id/ll_icon"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_name"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:visibility="gone" >

        <Button
            style="@style/btn_style"
            android:layout_width="fill_parent"
            android:layout_height="21dp"
            android:text="@string/selected_icon" />

        <Button
            style="@style/btn_style"
            android:layout_width="fill_parent"
            android:layout_height="21dp"
            android:layout_marginTop="10dp"
            android:text="@string/upload_icon" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_icon"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_sure"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/ok"
            android:textSize="@dimen/page_des" />

        <Button
            android:id="@+id/btn_cancle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:text="@string/cancel"
            android:textSize="@dimen/page_des" />
    </LinearLayout>

</RelativeLayout>