<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/line_layout_device"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/tips"
        android:textColor="@color/black"
        android:textSize="@dimen/page_title" />

    <TextView
    android:id="@+id/tv_gap"
    android:layout_width="fill_parent"
    android:layout_height="1dp"
    android:layout_below="@+id/tv_title"
    android:layout_marginTop="0dp"
    android:background="@color/blue" />

    <TextView
        android:id="@+id/tv_tip"
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:text=""
        android:layout_below="@+id/tv_gap"
        android:layout_marginTop="0dp"
        android:gravity="center" android:textColor="@color/red"
       />
    <RelativeLayout android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_below="@+id/tv_tip"
        android:id="@+id/rl_old">
        <TextView android:id="@+id/tv_old"
            android:layout_width="wrap_content"
            android:gravity="bottom"
            android:textSize="14dp"
            android:layout_marginRight="5dp"
            android:layout_height="fill_parent"
            android:text="@string/old_password"
            android:layout_marginLeft="10dp"/>

        <EditText
            android:textSize="16dp"
            android:id="@+id/et_old"
            android:layout_width="fill_parent"
            android:gravity="bottom"
            android:layout_height="fill_parent"
            android:layout_toRightOf="@+id/tv_old"
            android:hint="@string/change_password"
            android:inputType="textPassword"/>
    </RelativeLayout>

    <RelativeLayout android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:id="@+id/rl_new"
        android:layout_below="@+id/rl_old">
        <TextView android:id="@+id/tv_new"
            android:gravity="bottom"
            android:textSize="14dp"
            android:layout_width="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_height="fill_parent"
            android:text="@string/new_password"
            android:layout_marginLeft="10dp"/>

        <EditText android:id="@+id/et_new"
            android:textSize="16dp"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_toRightOf="@+id/tv_new"
            android:gravity="bottom"
            android:hint="@string/enter_new_passwod"
            android:inputType="textPassword"/>
    </RelativeLayout>

    <RelativeLayout android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:id="@+id/rl_new2"
        android:layout_below="@+id/rl_new">
        <TextView android:id="@+id/tv_new2"
            android:gravity="bottom"
            android:textSize="14dp"
            android:layout_width="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_height="fill_parent"
            android:text="@string/confirm_new_password"
            android:layout_marginLeft="10dp"/>

        <EditText android:id="@+id/et_new2"
            android:textSize="16dp"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@null"
            android:gravity="bottom"
            android:layout_toRightOf="@+id/tv_new2"
            android:hint="@string/again_new_password"
            android:inputType="textPassword"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_gap2"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/rl_new2"
        android:layout_marginTop="0dp"
        android:background="@color/blue" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_gap2" >

        <Button
            android:id="@+id/btn_sure"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/Save"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btn_cancle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/black" />
    </LinearLayout>

</RelativeLayout>