<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <EditText
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_title"
        android:padding="4dp"
        android:hint="@string/input_simple_title"
        android:background="@drawable/feedback_cornor"
        android:singleLine="true"/>
    
    <EditText
        android:padding="4dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/et_title"
        android:id="@+id/et_content"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:hint="@string/describ_feebback"
        android:gravity="top"
        android:background="@drawable/feedback_cornor"
        android:paddingRight="20dp"/>
    <Button
        android:layout_marginTop="40dp"
        android:layout_below="@+id/et_content"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_heigh"
        android:background="@drawable/login_shape"
        android:textColor="@color/white"
        android:text="@string/commit"
        android:id="@+id/bt_button"/>

</RelativeLayout>