<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray">

    <RelativeLayout
        android:id="@+id/layou_timers"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginBottom="3dp"
        android:background="@color/gray"
        android:visibility="visible">
        <Button
            android:id="@+id/btn_add_timer"
            android:layout_width="fill_parent"
            android:layout_height="57dp"
            android:layout_alignParentTop="true"

            android:layout_marginTop="2dp"
            android:background="@color/white"
            android:drawableLeft="@drawable/add_group"
            android:gravity="left|center_vertical"
            android:paddingBottom="1dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:text="@string/add_new_timer" />
        <TextView
            android:id="@+id/tv_top"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/btn_add_timer"
            android:background="@color/gray"
            />
        <ListView
            android:id="@+id/lv_timers"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_below="@+id/tv_top" android:cacheColorHint="#00000000" />
        <TextView
            android:id="@+id/tv_bottom"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/lv_timers"
            android:layout_alignParentBottom="true"
            android:background="@color/gray"/>

    </RelativeLayout>

    <ScrollView
        android:id="@+id/sv_parent"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/ll_cal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="5dp"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TimePicker
                    android:id="@+id/time_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <DatePicker
                    android:id="@+id/date_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:calendarViewShown="false" />
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp"
        android:gravity="center"
        android:weightSum="7"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_re"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeat" />

        <TextView
            android:id="@+id/tv_one"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="35dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/round_gray"
            android:gravity="center"
            android:text="@string/one" />

        <TextView
            android:id="@+id/tv_two"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="35dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/round_gray"
            android:gravity="center"
            android:text="@string/two" />

        <TextView
            android:id="@+id/tv_three"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="35dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/round_gray"
            android:gravity="center"
            android:text="@string/three" />

        <TextView
            android:id="@+id/tv_four"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="35dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/round_gray"
            android:gravity="center"
            android:text="@string/four" />

        <TextView
            android:id="@+id/tv_five"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="35dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/round_gray"
            android:gravity="center"
            android:text="@string/five" />

        <TextView
            android:id="@+id/tv_six"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="35dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/round_gray"
            android:gravity="center"
            android:text="@string/six" />

        <TextView
            android:id="@+id/tv_seven"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="35dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/round_gray"
            android:gravity="center"
            android:text="@string/seven" />
    </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <LinearLayout
                android:id="@+id/ll_detail_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/ll_bottom"
                android:orientation="horizontal"></LinearLayout>

            <Button
                android:id="@+id/btn_finish"
                style="@style/btn_style"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:text="@string/complete" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>

