<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:background="@drawable/feedback_cornor"
    android:layout_height="fill_parent">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/manager_group"
        android:padding="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="40dp"
        android:textSize="18sp"
        android:id="@+id/tv_group"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#ffffff"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit_login"
        android:padding="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="40dp"
        android:textSize="18sp"
        android:id="@+id/tv_exit_coolkit"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#ffffff"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit_coolkit"
        android:padding="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="40dp"
        android:textSize="18sp"
        android:id="@+id/tv_exit_process"/>
</LinearLayout>